    against INFO THREADS, ps and top.
  o Created automatically generated build number, so that it is easier to see
    whether a build is newer or older than an other.
  o Changed configuration element mipmapping_default_on to mipmapping-default-on
    for consistency with the rest of the configuration (Jesper Stærkær).
  o Handle stdin EOF as EXIT.

Consumers
---------

  o FFmpeg consumer:
    + Fixed long overdue bug where HD material was always recorded using the
      BT.601 color matrix instead of the BT.709 color matrix. RGB codecs like
      qtrle was never affected but all the YCbCr based codecs were.
    + Fixed bug in parsing of paths containing -.
  o DeckLink consumer:
    + Fixed possible dead-lock in frame queue.

Producers
---------

  o FFmpeg producer:
    + Increased the max number of frames that audio/video can be badly
      interleaved with (Dimitry Ishenko).
    + Fixed bug where decoders sometimes requires more than one video packet to
      decode the first frame.
  o Framerate producer:
    + Fixed bug when INFO was used on a not yet playing framerate producer.
  o HTML producer:
    + Fixed bug where only URL:s with . in them where recognized.

Mixer
-----

  o Fixed bug in the contrast/saturation/brightness code where the wrong luma
    coefficients was used.
  o Rewrote the chroma key code to support variable hue, instead of fixed green
    or blue. Threshold setting was removed in favour of separate hue width,
    minimum saturation and minimum brightness constraints.

AMCP
----

  o INFO PATHS now adds all the path elements even if they are using the default
    values.
  o MIXER CHROMA syntax deprecated (still supported) in favour of the more
    advanced syntax required by the rewritten chroma key code.
  o Added special command REQ that can be prepended before any command to
    identify the response with a client specified request id, allowing a client
    to know exactly what asynchronous response matched a specific request.


